--- a/roles/thirdparty-docker/tasks/main.yml
+++ b/roles/thirdparty-docker/tasks/main.yml
@@ -13,7 +13,7 @@
   - name: Install Docker
     package: name={{item}} state=present
     with_items:
-      - docker-ce
+      - docker-ce-{{docker_version}}*
 
 
   # # Configure http proxy for Docker if required
