--- a/roles/k8s-kubectl-config/tasks/main.yml
+++ b/roles/k8s-kubectl-config/tasks/main.yml
@@ -1,22 +1,24 @@
 ---
   # Deploy kubeconfig files to all nodes
 
-  #- name: Create a copy of admin.conf to config
-  #  copy:
-  #    src: /etc/kubernetes/admin.conf
-  #    dest: /etc/kubernetes/config
-
   # As copy doesn't use respect become=true, the below is a workaround
   # more info: https://github.com/ansible/ansible/issues/21145
-  - name: Create a copy of admin.conf to config
-    shell: chmod 644 /etc/kubernetes/admin.conf && cp /etc/kubernetes/admin.conf /etc/kubernetes/config
+  - name: Set admin.conf chmod bits to 644
+    file:
+      path: /etc/kubernetes/admin.conf
+      mode: '0644'
 
-  - name: Copy config keys to all nodes
+  - name: Create a copy of admin.conf to config
+    copy:
+      src: /etc/kubernetes/admin.conf
+      dest: /etc/kubernetes/config
+
+  - name: Copy config keys to all nodes for root user
     copy:
       src: /etc/kubernetes/config
       dest: /root/.kube/
-      # owner: root
-      # group: root
+      owner: root
+      group: root
 
   - name: Copy token key to all nodes (required for kubeadm join)
     copy:
