Fixed disabling swap

--- a/roles/common-prereq-software/tasks/main.yml
+++ b/roles/common-prereq-software/tasks/main.yml
@@ -13,10 +13,15 @@
 
   # Disable swap
   - name: Remove swapfile from /etc/fstab
-    mount:
-      name: swap
-      fstype: swap
+    lineinfile:
+      dest: /etc/fstab
+      regexp: '^(.*)swap(.*)'
+      backrefs: yes
       state: absent
+    # mount:
+    #   name: swap
+    #   fstype: swap
+    #   state: absent
 
   - name: Disable swap
     command: swapoff -a
