--- a/roles/k8s-install-dashboard/tasks/main.yml
+++ b/roles/k8s-install-dashboard/tasks/main.yml
@@ -27,7 +27,7 @@
       path: "/tmp/{{ dashboard_yaml }}"
       insertafter: '        args:'
       line: '          - --enable-skip-login'
-    when: demo_environment == 'yes'
+    when: enable_skip_login == 'yes'
 
   # Install Dashboard
   - name: Install Kubernetes Dashboard
